# karma

./: .gitignore  README  docker-compose.local.yml  main.js  package-lock.json  package.json  repomix-output.txt  sim.ipynb
backend/: .env  Caddyfile  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  generate_service_area_pdf.py  pyproject.toml  repomix-output.txt  run.py
backend/app/: __init__.py  config.py  extensions.py  repomix-output.txt
backend/app/dto/: auth.py  credit_note_item.py  customer.py  customer_order.py  customer_order_item.py  debit_note_item.py  employee.py  expense.py  financial_account.py  fixed_asset.py  inventory.py  inventory_event.py  invoice.py  invoice_item.py  location.py  material.py  payment.py  payout.py  pricing.py  process.py  process_template.py  purchase_order.py  purchase_order_item.py  service_area.py  super_admin.py  task.py  task_execution.py  transaction.py  trip.py  trip_stop.py  vehicle_inventory.py  vehicle_inventory_event.py  vendor.py  warehouse.py  workflow.py  workflow_execution.py
backend/app/repositories/: __init__.py  google_sheets_repository.py
backend/app/utils/: geom_utils.py
backend/location_ingest/: __main__.py
backend/migrations/: env.py
backend/migrations/versions/: 003c09f833a8_add_is_deleted_to_warehouse.py  0597c35f5440_add_workflow_execution_uuid_to_process.py  09025bd4aa0a_update_credit_note_and_debit_note.py  (+104 more)
backend/models/: base.py  common.py  financials.py
backend/scripts/: gen_role_presets.py  parity_check.py  seed_admin.py  wait_for_db.py
backend/tests/: conftest.py
(+587 files in other folders)
